KTouch increased the level even if there's only one level. This fix allows this feature only if there is more than one level.

Expected behaviour: KTouch doesn't restart the lecture when the "Automatic level adjustment" configurations are achieved in case of a custom lecture file.

BUG: 235904